--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ ul li a:hover {
  	padding-left: 20px;
  	padding-bottom: 25px;
  	font-family: arial;
+	font-size: 25px;
  	letter-spacing :1.2px;
  	line-height: 30px;
 	width: 55vw;
@@ -145,22 +146,25 @@ ul li a:hover {
  }
 
  .content .nhard{
-	display:block;
+	display:inline-block;
  	color: red;
 	font-family: modern typewriter;
  	font-size: 70px;
 	font-weight: bold;
 	padding-bottom: 10px;
-	width: 30vw;
+	padding-right: 3px;
+	
+	border-right: 3px solid rgb(172, 172, 172);
  }
  .content .smart{
-	display: block;
+	display: inline-block;
 	font-family: modern typewriter;
 	font-size: 70px;
 	font-weight: bold;
-	width: 50vw;
-
+	margin-right: 10px;
+	margin-bottom: 20px;
  }
+ 
 
  .form{
 	
